# very_bad_vliw

./: .gitignore  BRAINDUMP.md  BUILDING.md  Makefile  README.md  THEPLAN.md  copy_mem.sh  generic.mk  hw.mk  run_6004.sh  run_pipelined.sh  sim_run.py  test.sh  test_all.sh
compiler/: .gitignore  1.hex  2.hex  Cargo.toml  Dockerfile  all.sh  b.json  driver.py  hw2.1  inp.asm  inp_1.asm  notes.md  out.S  out.asm  out.diff  out.hex  out.s.hex  out2.hex  out32  run.sh
compiler/.github/workflows/: docker.yml  rust.yml
compiler/given_tests/15/: input.json
compiler/src/: analysis.rs  assembler.rs  finalization.rs  isa.rs  main.rs  regalloc.rs  scheduling.rs
fpga/proj/: .gitignore  Makefile  Makefile.intel  convert.py
fpga/src/: CoreWrapper.v  top.v
fpga/tb/: .gitignore  Makefile  input.vc  sim_main.cpp  simpleMemSlave.v  tb_harness.v  uartdpi.c  uartdpi.h  uartdpi.sv
hw/core/: Alu.bsv  BranchUnit.bsv  Core.bsv  FlitEngine.bsv  MemUnit.bsv  MultiportRam.bsv  Pipelined.bsv  PipelinedSyn.bsv  RVUtil.bsv  SlightlyBetterVliw.bsv  SlightlyBetterVliw.bsv.1  VLIW.bsv  VeryBadVliw.bsv
hw/mem/: Cache32.bsv  Cache512.bsv  CacheInterface.bsv  ICache.bsv  MainMem.bsv  MemTypes.bsv  zero.mem  zero512.mem
hw/tb/: Sim.bsv  SingleCoreTest.bsv
hw/top/: TopCore.bsv
hw/util/: DelayLine.bsv  KonataHelper.bsv  Logging.bsv
sw/common/: mmio.c  mmio.h
sw/progs/: Makefile  add32_patched  assemblingtest.s  bsp.h  build.sh  encoding.h  generate_dump.sh  init.S  intermediate32.s  just_the_text  mmio.c  mmio.h  mmio.ld  objdumpTest.s
tools/: arrange_mem.py  spike-dasm
(+99 files in other folders)
