[package]
name = "hw2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rand = {version = "0.8.5", features=["small_rng"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
serde_with = { version = "3.8.0", features = ["macros"] }